pages/Contact.css
body {
  position: relative;
  background-color: #faf5ff;
}

a{
  text-decoration: none;
  color: unset;
}

/*site container*/
.wrapper {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  width: 80%;
  max-width: 420px;
  margin: 0 auto;
}

h1 {
  text-align: center;
  padding: 30px 0px 0px 0px;
  font: 25px Oswald;
  color: #6f6868;
  text-transform: uppercase;
  /* text-shadow: #000 0px 1px 5px; */
  margin: 0px;
}

p {
  font: 13px Open Sans;
  color: #6e6e6e;
  /* text-shadow: #000 0px 1px 5px; */
  margin-bottom: 30px;
  width: 75%;
}

.form {
  width: 80%;
}

input[type="text"],
input[type="email"] {
  width: 98%;
  padding: 15px 0px 15px 8px;
  border-radius: 5px;
  box-shadow: inset 4px 6px 10px -4px rgba(0, 0, 0, 0.3),
    0 1px 1px -1px rgba(255, 255, 255, 0.3);
  background: rgba(0, 0, 0, 0.2);
  outline: none;
  border: none;
  border: 1px solid black;
  margin-bottom: 10px;
  color: #6e6e6e;
  /* text-shadow: #000 0px 1px 5px; */
}

.message{
    width: 98%;
  padding: 15px 0px 15px 8px;
  border-radius: 5px;
  box-shadow: inset 4px 6px 10px -4px rgba(0, 0, 0, 0.3),
    0 1px 1px -1px rgba(255, 255, 255, 0.3);
  background: rgba(0, 0, 0, 0.2);
  outline: none;
  border: none;
  border: 1px solid black;
  margin-bottom: 10px;
  color: #6e6e6e;  

}

input[type="submit"] {
  width: 98%;
  padding: 15px;
  border-radius: 5px;
  outline: none;
  border: none;
  background-color: #9333ea;
  font: 14px Oswald;
  color: #fff;
  text-transform: uppercase;
  text-shadow: #000 0px 1px 5px;
  border: 1px solid #000;
  opacity: 0.7;
  -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.7);
  -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.7);
  box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.7);
  border-top: 1px solid rgba(255, 255, 255, 0.8) !important;
  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255, 255, 255, 0.2)));
}

input:focus {
  box-shadow: inset 4px 6px 10px -4px rgba(0, 0, 0, 0.7),
    0 1px 1px -1px rgba(255, 255, 255, 0.3);
  background: rgba(0, 0, 0, 0.3);
  -webkit-transition: 1s ease;
  -moz-transition: 1s ease;
  -o-transition: 1s ease;
  -ms-transition: 1s ease;
  transition: 1s ease;
}

input[type="submit"]:hover {
  opacity: 1;
  cursor: pointer;
}

.name-help,
.email-help {
  display: none;
  padding: 0px;
  margin: 0px 0px 15px 0px;
}

.optimize {
  position: fixed;
  right: 3%;
  top: 0px;
}

.links-wrapper{
position: fixed;
bottom: 0;
left:50%;
font-size: 2rem;
transform: translate(-50%, -50%);
}

.links-wrapper > *:hover {
cursor: pointer;
color:#9333ea;
}

